--- a/K205Agency/Areas/admin/Views/Shared/_Layout.cshtml
+++ b/K205Agency/Areas/admin/Views/Shared/_Layout.cshtml
@@ -47,6 +47,12 @@
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Dashboard</span></a>
             </li>
+            
+            <li class="nav-item">
+                <a class="nav-link" href="/admin/portfolios">
+                    <i class="fas fa-fw fa-tachometer-alt"></i>
+                    <span>Portfolio</span></a>
+            </li>
 
             <!-- Divider -->
             <hr class="sidebar-divider">
