--- a/K205Agency/Areas/admin/Views/_ViewImports.cshtml
+++ b/K205Agency/Areas/admin/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using K205Agency
 @using K205Agency.Models
 @using K205Agency.ViewModel
+@using K205Agency.Areas.admin.ViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
