--- a/K205Agency/Areas/admin/Views/Portfolios/Index.cshtml
+++ b/K205Agency/Areas/admin/Views/Portfolios/Index.cshtml
@@ -1,6 +1,55 @@
-﻿@model AdminVM
+﻿@model IEnumerable<Portfolio>
 
-@foreach (var item in Model.Portfolios)
-{
-    <h1>@item.Name</h1>
-}
+
+
+
+<!-- DataTales Example -->
+                    <div class="card shadow mb-4">
+                        <div class="card-header py-3">
+                            <h6 class="m-0 font-weight-bold text-primary">DataTables Example</h6>
+                        </div>
+                        <div class="card-body">
+                            <div class="table-responsive">
+                                <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                                    <thead>
+                                        <tr>
+                                            <th>Name</th>
+                                            <th>Description</th>
+                                            <th>Photo</th> 
+                                            <th>Category</th>
+                                            <th> </th>
+                                        </tr>
+                                    </thead>
+                                    <tfoot>
+                                        <tr>
+                                            <th>Name</th>
+                                            <th>Description</th>
+                                            <th>Photo</th>
+                                            <th>Category</th>
+                                            <th> </th>
+                                        </tr>
+                                    </tfoot>
+                                    <tbody>
+                                        @foreach (var item in Model)
+                                        {
+                                            <tr>
+                                                <td>@item.Name</td>
+                                                <td>@item.Description</td>
+                                                <td>
+                                                    <img width="100" src="@item.PhotoURL" />
+                                                </td>
+                                                <td>@item.Category.CategoryName</td>
+                                                <td>
+
+                                                </td>
+                                            </tr>
+                                        }
+                                        
+                                
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+
+
